# biPangolin

./: .gitignore  GAPDH.fasta  PACKAGING.md  README.md  README_pkg.md  THIRD_PARTY_NOTICES.md  example_analysis.ipynb  identify_optimal_correction.py  pangolin.yml  pangolin_vs_platypus.html  paper_figures.ipynb  piPangolin_runner.py  pyproject.toml  train_probe_different_pos.py  train_probes.py
.ipynb_checkpoints/: paper_figures-checkpoint.ipynb
bench_metrics/: correlations.npz  pr_curves_cache.npz  summary.csv
benchmark/: bench_correlations.py  bench_metrics.py  bench_overhead.py  bench_score.py  bench_score.sbatch  run_all.sbatch  spliceai_worker.py  verify_tiling.py
bioconda/bipangolin/: build.sh  meta.yaml
easter_eggs/: pangolin_vs_spliceai.html
example_bedgraphs/: GAPDH_chr12_hg38_slice.fa.fxi  GAPDH_hg38_bipangolin.brain.prob.acceptor.bg  GAPDH_hg38_bipangolin.brain.prob.donor.bg  GAPDH_hg38_bipangolin.heart.prob.acceptor.bg  GAPDH_hg38_bipangolin.heart.prob.donor.bg  GAPDH_hg38_bipangolin.liver.prob.acceptor.bg  GAPDH_hg38_bipangolin.liver.prob.donor.bg  GAPDH_hg38_bipangolin.testis.prob.acceptor.bg  GAPDH_hg38_bipangolin.testis.prob.donor.bg
example_bedgraphs/direct_cli/: GAPDH_hg38_bipangolin.brain.prob.acceptor.bg  GAPDH_hg38_bipangolin.brain.prob.donor.bg  GAPDH_hg38_bipangolin.heart.prob.acceptor.bg  GAPDH_hg38_bipangolin.heart.prob.donor.bg  GAPDH_hg38_bipangolin.liver.prob.acceptor.bg  GAPDH_hg38_bipangolin.liver.prob.donor.bg  GAPDH_hg38_bipangolin.testis.prob.acceptor.bg  GAPDH_hg38_bipangolin.testis.prob.donor.bg
example_vcf/: GAPDH_example_variants.bipangolin.vcf  GAPDH_example_variants.interpretation.tsv  GAPDH_example_variants.notes.tsv  GAPDH_example_variants.vcf
paper_figures/: example_four_track_per_tissue.npy  spliceai_example_probs.npz
src/bipangolin/: __init__.py  _variants.py  _weights.py  cli.py  model.py  runner.py
src/bipangolin/data/probes/: optimal_correction.json  probe.final.1.0.3.v2.('skip', 'resblock_15', 'resblock_11', 'resblock_7', 'resblock_3', 'resblock_1')+seq.k1.h64.pt  probe.final.1.0.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.1.1.3.v2.('skip', 'resblock_15', 'resblock_11', 'resblock_7', 'resblock_3', 'resblock_1')+seq.k1.h64.pt  probe.final.1.2.3.v2.('skip', 'resblock_15', 'resblock_11', 'resblock_7', 'resblock_3', 'resblock_1')+seq.k1.h64.pt  probe.final.1.2.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.1.3.3.v2.('skip', 'resblock_15', 'resblock_11', 'resblock_7', 'resblock_3', 'resblock_1')+seq.k1.h64.pt  probe.final.1.4.3.v2.('skip', 'resblock_15', 'resblock_11', 'resblock_7', 'resblock_3', 'resblock_1')+seq.k1.h64.pt  (+23 more)
src/bipangolin/probes/: probe.final.1.6.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.2.0.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.3.0.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.3.2.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.3.4.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt  probe.final.3.6.3.v2.skip+resblock_15+resblock_11+resblock_7+resblock_3+resblock_1+seq.k1.h64.pt
tests/: conftest.py  test_calibration.py  test_cli_helpers.py  test_encoding_and_metadata.py  test_result_routing.py  test_runner_helpers.py  test_splice_site_ablation.py  test_variants.py  test_weights.py
