[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bipangolin"
version = "0.3.0"
description = "Per-base donor/acceptor splice site predictions from Pangolin representations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Oscar Wilkins", email = "oscar.wilkins@crick.ac.uk" },
]
keywords = ["bioinformatics", "splicing", "deep-learning", "splice-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
fasta = ["pyfastx>=2.0"]
dev = ["pytest>=7", "pyfastx>=2.0"]

[project.scripts]
bipangolin = "bipangolin.cli:main"

[project.urls]
Homepage = "https://github.com/USERNAME/bipangolin"
Repository = "https://github.com/USERNAME/bipangolin"
Issues = "https://github.com/USERNAME/bipangolin/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bipangolin"]

[tool.hatch.build.targets.wheel.force-include]
"src/bipangolin/data/probes" = "bipangolin/data/probes"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
