[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bipangolin"
version = "0.5.0"
description = "Per-base donor/acceptor splice site predictions from Pangolin representations"
readme = "README.md"
license = { file = "LICENSE" }
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
requires-python = ">=3.9"
authors = [
    { name = "Oscar Wilkins", email = "oscar.wilkins@crick.ac.uk" },
]
keywords = ["bioinformatics", "splicing", "deep-learning", "splice-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.20",
    "pyfastx>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
bipangolin = "bipangolin.cli:main"

[project.urls]
Homepage = "https://github.com/Delayed-Gitification/biPangolin"
Repository = "https://github.com/Delayed-Gitification/biPangolin"
Issues = "https://github.com/Delayed-Gitification/biPangolin/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bipangolin"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/THIRD_PARTY_NOTICES.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Pangolin model weights and run real inference",
]
